# pushmute

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT_PLAN.md  LICENSE  PRD.md  README.md  TODO.md  install.sh  pushmute.service  release.toml  smr.service
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: GIT_CLEANUP.md  PRD.md  design.md
packaging/: .SRCINFO  PKGBUILD  pushmute.desktop  pushmute.install
scripts/: dev-refresh.sh
src/: autostart.rs  config.rs  daemon.rs  doctor.rs  input.rs  ipc.rs  main.rs  notify.rs  pipewire.rs  tray.rs
tests/fixtures/: pw-dump-new.json  pw-dump-old.json  wpctl-inspect-default-source.txt
