[package]
name = "pushmute"
version = "0.1.0"
edition = "2021"
description = "Push-to-mute for PipeWire — route your mic to one app and silence it with a global hotkey"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JacksonMcDonaldDev/pushmute"

[[bin]]
name = "pushmute"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
evdev = "0.12"
ctrlc = { version = "3", features = ["termination"] }
ksni = { version = "0.3.5", default-features = false, features = ["blocking", "async-io"] }

[profile.release]
lto = true
strip = true
